--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.5.2/firebase-app.js"></script>
+    <script src="/__/firebase/7.19.1/firebase-app.js"></script>
+
+    <script src="/__/firebase/7.19.1/firebase-auth.js"></script>
+
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
       https://firebase.google.com/docs/web/setup#available-libraries -->
